# katas

./: LICENSE  katas.cabal  stack.yaml
src/: Kata05.hs  Kata06.hs  Kata08.hs
