name:                katas
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/katas#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Kata05
                     , Kata06
                     , Kata08
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , bv
                     , bytestring
                     , cryptohash
                     , containers
                     , QuickCheck
                     , HUnit
                     , discrimination
                     , test-framework
                     , test-framework-hunit
  default-language:    Haskell2010

executable katas-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , katas
                     , cryptohash
                     , bv
  default-language:    Haskell2010

executable kata06
  hs-source-dirs:      src
  main-is:             Kata06.hs
  ghc-options:
  build-depends:       base
                     , discrimination
                     , containers

test-suite katas-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , katas
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/katas
